[package]
name = "seek_bufread"
version = "1.0.1"
authors = ["gcarq <michael.egger@tsn.at>"]
description = "A drop-in replacement for std::io::BufReader with seeking support."

keywords = ["seek", "bufread", "io", "buffer", "reader"]
repository = "https://github.com/gcarq/seek_bufread"

readme = "README.md"

license = "MIT/Apache-2.0"
license-file = "LICENSE"

[dependencies]
